--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@
 				changeWallpaper: function() {
 					document.body.style.background = "url('" + this.wallpapers[(Math.floor(Math.random() * this.wallpapers.length))] + "') fixed center center no-repeat #000000";
 
+
+					//$("body").attr("background", "url('" + this.wallpapers[(Math.floor(Math.random() * this.wallpapers.length))] + "') fixed center center no-repeat #000000");
+					
 					// $body.attr("background", "#000000 url('" + this.wallpapers[(Math.floor(Math.random() * this.wallpapers.length))] + "') no-repeat center center";
 					// $body.attr("class", "fancy");
 				},
